--- a/serialCom/res/serialCom.ui
+++ b/serialCom/res/serialCom.ui
@@ -23,9 +23,9 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>140</y>
+     <y>10</y>
      <width>541</width>
-     <height>271</height>
+     <height>751</height>
     </rect>
    </property>
    <property name="title">
@@ -177,13 +177,127 @@
      <string/>
     </property>
    </widget>
+   <widget class="QTableWidget" name="dataTable">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>270</y>
+      <width>271</width>
+      <height>361</height>
+     </rect>
+    </property>
+    <attribute name="horizontalHeaderDefaultSectionSize">
+     <number>80</number>
+    </attribute>
+    <row>
+     <property name="text">
+      <string>1</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>2</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>3</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>4</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>5</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>6</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>7</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>8</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>9</string>
+     </property>
+    </row>
+    <row>
+     <property name="text">
+      <string>10</string>
+     </property>
+    </row>
+    <column>
+     <property name="text">
+      <string>标志位</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>拧紧力矩</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>拧紧角度</string>
+     </property>
+    </column>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>290</y>
+      <width>131</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>查看上一组</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>360</y>
+      <width>131</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>查看下一组</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>460</y>
+      <width>100</width>
+      <height>30</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>570</x>
      <y>10</y>
-     <width>541</width>
+     <width>440</width>
      <height>111</height>
     </rect>
    </property>
@@ -193,7 +307,7 @@
    <widget class="QPushButton" name="openBtn">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>210</x>
       <y>20</y>
       <width>100</width>
       <height>30</height>
@@ -208,7 +322,7 @@
      <rect>
       <x>80</x>
       <y>20</y>
-      <width>191</width>
+      <width>120</width>
       <height>30</height>
      </rect>
     </property>
@@ -232,7 +346,7 @@
    <widget class="QPushButton" name="closeBtn">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>210</x>
       <y>60</y>
       <width>100</width>
       <height>30</height>
@@ -260,7 +374,7 @@
      <rect>
       <x>80</x>
       <y>60</y>
-      <width>191</width>
+      <width>120</width>
       <height>30</height>
      </rect>
     </property>
@@ -271,7 +385,7 @@
    <widget class="QPushButton" name="stopReadBtn">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>330</x>
       <y>60</y>
       <width>100</width>
       <height>30</height>
@@ -284,7 +398,7 @@
    <widget class="QPushButton" name="startReadBtn">
     <property name="geometry">
      <rect>
-      <x>420</x>
+      <x>330</x>
       <y>20</y>
       <width>100</width>
       <height>30</height>
@@ -308,95 +422,76 @@
     <string/>
    </property>
   </widget>
-  <widget class="QTableWidget" name="dataTable">
+  <widget class="QGroupBox" name="groupBox_3">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>50</y>
-     <width>271</width>
-     <height>361</height>
+     <x>570</x>
+     <y>140</y>
+     <width>441</width>
+     <height>621</height>
     </rect>
    </property>
-   <attribute name="horizontalHeaderDefaultSectionSize">
-    <number>80</number>
-   </attribute>
-   <row>
-    <property name="text">
-     <string>1</string>
+   <property name="title">
+    <string>条形码扫描:</string>
+   </property>
+   <widget class="QLineEdit" name="barcodeEdit">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>30</y>
+      <width>350</width>
+      <height>30</height>
+     </rect>
     </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>2</string>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>65</width>
+      <height>30</height>
+     </rect>
     </property>
-   </row>
-   <row>
     <property name="text">
-     <string>3</string>
+     <string>条形码:</string>
     </property>
-   </row>
-   <row>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>80</y>
+      <width>65</width>
+      <height>30</height>
+     </rect>
+    </property>
     <property name="text">
-     <string>4</string>
+     <string>数据显示:</string>
     </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>5</string>
+   </widget>
+   <widget class="QTextBrowser" name="textBrowser">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>80</y>
+      <width>351</width>
+      <height>521</height>
+     </rect>
     </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>6</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>7</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>8</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>9</string>
-    </property>
-   </row>
-   <row>
-    <property name="text">
-     <string>10</string>
-    </property>
-   </row>
-   <column>
-    <property name="text">
-     <string>标志位</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>拧紧力矩</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>拧紧角度</string>
-    </property>
-   </column>
+   </widget>
   </widget>
-  <widget class="QLabel" name="label_9">
+  <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>580</x>
-     <y>10</y>
-     <width>65</width>
+     <x>340</x>
+     <y>430</y>
+     <width>100</width>
      <height>30</height>
     </rect>
    </property>
    <property name="text">
-    <string>数据显示:</string>
+    <string>设置分组:</string>
    </property>
   </widget>
  </widget>
