--- a/serialCom/res/serialCom.ui
+++ b/serialCom/res/serialCom.ui
@@ -25,7 +25,7 @@
      <x>20</x>
      <y>10</y>
      <width>541</width>
-     <height>751</height>
+     <height>301</height>
     </rect>
    </property>
    <property name="title">
@@ -37,7 +37,7 @@
       <x>130</x>
       <y>30</y>
       <width>391</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="readOnly">
@@ -50,7 +50,7 @@
       <x>20</x>
       <y>30</y>
       <width>110</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="text">
@@ -61,9 +61,9 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>80</y>
+      <y>75</y>
       <width>150</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="readOnly">
@@ -74,9 +74,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>80</y>
+      <y>75</y>
       <width>110</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="text">
@@ -87,9 +87,9 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>130</y>
+      <y>120</y>
       <width>150</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="readOnly">
@@ -100,9 +100,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>130</y>
+      <y>120</y>
       <width>110</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="text">
@@ -113,9 +113,9 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>180</y>
+      <y>165</y>
       <width>150</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="readOnly">
@@ -126,9 +126,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>180</y>
+      <y>165</y>
       <width>111</width>
-      <height>31</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="text">
@@ -139,9 +139,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>230</y>
+      <y>210</y>
       <width>110</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="text">
@@ -152,9 +152,9 @@
     <property name="geometry">
      <rect>
       <x>130</x>
-      <y>230</y>
-      <width>101</width>
-      <height>30</height>
+      <y>210</y>
+      <width>151</width>
+      <height>35</height>
      </rect>
     </property>
     <property name="readOnly">
@@ -164,8 +164,8 @@
    <widget class="QLabel" name="flagBitLabel">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>230</y>
+      <x>290</x>
+      <y>190</y>
       <width>30</width>
       <height>30</height>
      </rect>
@@ -177,118 +177,17 @@
      <string/>
     </property>
    </widget>
-   <widget class="QTableWidget" name="dataTable">
+   <widget class="QLabel" name="infoLabel">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>270</y>
-      <width>271</width>
-      <height>361</height>
-     </rect>
-    </property>
-    <attribute name="horizontalHeaderDefaultSectionSize">
-     <number>80</number>
-    </attribute>
-    <row>
-     <property name="text">
-      <string>1</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>2</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>3</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>4</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>5</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>6</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>7</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>8</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>9</string>
-     </property>
-    </row>
-    <row>
-     <property name="text">
-      <string>10</string>
-     </property>
-    </row>
-    <column>
-     <property name="text">
-      <string>标志位</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>拧紧力矩</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>拧紧角度</string>
-     </property>
-    </column>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>320</x>
-      <y>290</y>
-      <width>131</width>
-      <height>41</height>
+      <y>255</y>
+      <width>491</width>
+      <height>35</height>
      </rect>
     </property>
     <property name="text">
-     <string>查看上一组</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_2">
-    <property name="geometry">
-     <rect>
-      <x>320</x>
-      <y>360</y>
-      <width>131</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>查看下一组</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="lineEdit">
-    <property name="geometry">
-     <rect>
-      <x>320</x>
-      <y>460</y>
-      <width>100</width>
-      <height>30</height>
-     </rect>
+     <string>信息:</string>
     </property>
    </widget>
   </widget>
@@ -298,7 +197,7 @@
      <x>570</x>
      <y>10</y>
      <width>440</width>
-     <height>111</height>
+     <height>131</height>
     </rect>
    </property>
    <property name="title">
@@ -308,9 +207,9 @@
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>20</y>
+      <y>30</y>
       <width>100</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="text">
@@ -321,9 +220,9 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>20</y>
+      <y>30</y>
       <width>120</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="readOnly">
@@ -334,9 +233,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>20</y>
+      <y>30</y>
       <width>65</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="text">
@@ -347,9 +246,9 @@
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>60</y>
+      <y>80</y>
       <width>100</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="text">
@@ -360,9 +259,9 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>60</y>
+      <y>80</y>
       <width>65</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="text">
@@ -373,9 +272,9 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>60</y>
+      <y>80</y>
       <width>120</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="readOnly">
@@ -386,9 +285,9 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>60</y>
+      <y>80</y>
       <width>100</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="text">
@@ -399,9 +298,9 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>20</y>
+      <y>30</y>
       <width>100</width>
-      <height>30</height>
+      <height>35</height>
      </rect>
     </property>
     <property name="text">
@@ -409,26 +308,13 @@
     </property>
    </widget>
   </widget>
-  <widget class="QLabel" name="infoLabel">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>430</y>
-     <width>541</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
   <widget class="QGroupBox" name="groupBox_3">
    <property name="geometry">
     <rect>
      <x>570</x>
-     <y>140</y>
+     <y>170</y>
      <width>441</width>
-     <height>621</height>
+     <height>141</height>
     </rect>
    </property>
    <property name="title">
@@ -438,9 +324,9 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>30</y>
+      <y>40</y>
       <width>350</width>
-      <height>30</height>
+      <height>40</height>
      </rect>
     </property>
    </widget>
@@ -448,51 +334,119 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
+      <y>40</y>
       <width>65</width>
-      <height>30</height>
+      <height>40</height>
      </rect>
     </property>
     <property name="text">
      <string>条形码:</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_9">
+  </widget>
+  <widget class="QGroupBox" name="groupBox_4">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>320</y>
+     <width>991</width>
+     <height>431</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>数据显示:</string>
+   </property>
+   <widget class="QLineEdit" name="groupCountEdit">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>80</y>
+      <x>630</x>
+      <y>40</y>
+      <width>121</width>
+      <height>35</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="preBtn">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>30</y>
+      <width>160</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>查看上一组</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="nextBtn">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>30</y>
+      <width>160</width>
+      <height>50</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>查看下一组</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>560</x>
+      <y>40</y>
       <width>65</width>
       <height>30</height>
      </rect>
     </property>
     <property name="text">
-     <string>数据显示:</string>
+     <string>设置分组:</string>
     </property>
    </widget>
-   <widget class="QTextBrowser" name="textBrowser">
+   <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>80</y>
-      <width>351</width>
-      <height>521</height>
+      <x>760</x>
+      <y>40</y>
+      <width>111</width>
+      <height>35</height>
      </rect>
     </property>
+    <property name="text">
+     <string>( 个 / 组 )</string>
+    </property>
    </widget>
-  </widget>
-  <widget class="QLabel" name="label_6">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>430</y>
-     <width>100</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>设置分组:</string>
-   </property>
+   <widget class="QLabel" name="dataPanel">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>90</y>
+      <width>511</width>
+      <height>341</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 75 12pt &quot;宋体&quot;;</string>
+    </property>
+    <property name="text">
+     <string>数据面板</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="graphPanel">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>90</y>
+      <width>401</width>
+      <height>341</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>曲线面板</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
