--- a/serialCom/res/serialCom.ui
+++ b/serialCom/res/serialCom.ui
@@ -40,6 +40,9 @@
       <height>35</height>
      </rect>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
     <property name="readOnly">
      <bool>true</bool>
     </property>
@@ -65,6 +68,9 @@
       <width>150</width>
       <height>35</height>
      </rect>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
     </property>
     <property name="readOnly">
      <bool>true</bool>
@@ -92,6 +98,9 @@
       <height>35</height>
      </rect>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
     <property name="readOnly">
      <bool>true</bool>
     </property>
@@ -117,6 +126,9 @@
       <width>150</width>
       <height>35</height>
      </rect>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
     </property>
     <property name="readOnly">
      <bool>true</bool>
@@ -157,6 +169,9 @@
       <height>35</height>
      </rect>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::NoFocus</enum>
+    </property>
     <property name="readOnly">
      <bool>true</bool>
     </property>
@@ -165,7 +180,7 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>190</y>
+      <y>210</y>
       <width>30</width>
       <height>30</height>
      </rect>
@@ -197,7 +212,7 @@
      <x>570</x>
      <y>10</y>
      <width>440</width>
-     <height>131</height>
+     <height>151</height>
     </rect>
    </property>
    <property name="title">
@@ -209,8 +224,11 @@
       <x>210</x>
       <y>30</y>
       <width>100</width>
-      <height>35</height>
+      <height>40</height>
      </rect>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
     </property>
     <property name="text">
      <string>打开串口</string>
@@ -220,10 +238,13 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>30</y>
+      <y>32</y>
       <width>120</width>
       <height>35</height>
      </rect>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::StrongFocus</enum>
     </property>
     <property name="readOnly">
      <bool>false</bool>
@@ -246,10 +267,13 @@
     <property name="geometry">
      <rect>
       <x>210</x>
-      <y>80</y>
+      <y>90</y>
       <width>100</width>
-      <height>35</height>
+      <height>40</height>
      </rect>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
     </property>
     <property name="text">
      <string>关闭串口</string>
@@ -259,7 +283,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
+      <y>90</y>
       <width>65</width>
       <height>35</height>
      </rect>
@@ -272,7 +296,7 @@
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>80</y>
+      <y>92</y>
       <width>120</width>
       <height>35</height>
      </rect>
@@ -285,10 +309,13 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>80</y>
+      <y>90</y>
       <width>100</width>
-      <height>35</height>
+      <height>40</height>
      </rect>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
     </property>
     <property name="text">
      <string>停止读取</string>
@@ -300,8 +327,11 @@
       <x>330</x>
       <y>30</y>
       <width>100</width>
-      <height>35</height>
+      <height>40</height>
      </rect>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
     </property>
     <property name="text">
      <string>开始读取</string>
@@ -312,9 +342,9 @@
    <property name="geometry">
     <rect>
      <x>570</x>
-     <y>170</y>
+     <y>180</y>
      <width>441</width>
-     <height>141</height>
+     <height>131</height>
     </rect>
    </property>
    <property name="title">
@@ -328,6 +358,9 @@
       <width>350</width>
       <height>40</height>
      </rect>
+    </property>
+    <property name="readOnly">
+     <bool>true</bool>
     </property>
    </widget>
    <widget class="QLabel" name="label_5">
@@ -359,7 +392,7 @@
    <widget class="QLineEdit" name="groupCountEdit">
     <property name="geometry">
      <rect>
-      <x>630</x>
+      <x>530</x>
       <y>40</y>
       <width>121</width>
       <height>35</height>
@@ -375,6 +408,9 @@
       <height>50</height>
      </rect>
     </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
+    </property>
     <property name="text">
      <string>查看上一组</string>
     </property>
@@ -382,11 +418,14 @@
    <widget class="QPushButton" name="nextBtn">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>280</x>
       <y>30</y>
       <width>160</width>
       <height>50</height>
      </rect>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
     </property>
     <property name="text">
      <string>查看下一组</string>
@@ -395,7 +434,7 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>560</x>
+      <x>460</x>
       <y>40</y>
       <width>65</width>
       <height>30</height>
@@ -408,7 +447,7 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>760</x>
+      <x>660</x>
       <y>40</y>
       <width>111</width>
       <height>35</height>
@@ -423,28 +462,60 @@
      <rect>
       <x>20</x>
       <y>90</y>
-      <width>511</width>
-      <height>341</height>
+      <width>421</width>
+      <height>331</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 75 12pt &quot;宋体&quot;;</string>
+     <string notr="true">font: 75 12pt &quot;宋体&quot;;
+background-color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="text">
      <string>数据面板</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    </property>
+    <property name="margin">
+     <number>20</number>
+    </property>
+    <property name="indent">
+     <number>5</number>
     </property>
    </widget>
    <widget class="QLabel" name="graphPanel">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>460</x>
       <y>90</y>
-      <width>401</width>
-      <height>341</height>
+      <width>521</width>
+      <height>331</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);
+font: 12pt &quot;宋体&quot;;</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="lineWidth">
+     <number>1</number>
     </property>
     <property name="text">
      <string>曲线面板</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    </property>
+    <property name="margin">
+     <number>20</number>
+    </property>
+    <property name="indent">
+     <number>5</number>
     </property>
    </widget>
   </widget>
